@@ -1,6 +1,6 @@
-$NetBSD: distinfo,v 1.2 2004/02/25 10:39:18 drochner Exp $
+$NetBSD: distinfo,v 1.3 2004/06/09 23:48:56 xtraeme Exp $
 
-SHA1 (dcraw-1.175/dcraw.c) = ef705b83f1fd4da7114efe2a7e805151fdb915f1
-Size (dcraw-1.175/dcraw.c) = 89839 bytes
-SHA1 (dcraw-1.175/dcraw.1) = fc91c9282ff44a1597894b456fd02c6538a29ad7
-Size (dcraw-1.175/dcraw.1) = 3237 bytes
+SHA1 (dcraw-1.175/dcraw.c) = b3506ad02ac650d6980ec5ba021bdf2c34185af5
+Size (dcraw-1.175/dcraw.c) = 103263 bytes
+SHA1 (dcraw-1.175/dcraw.1) = 0b81ef14e77579dd3f7a25244d75c7a0561c630e
+Size (dcraw-1.175/dcraw.1) = 3381 bytes
